<resources>
    <string name="app_name">TourGuide</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_text">Welcome to the Detroit Tour Guide App!</string>
    <string name="welcome_image_description">Detroit GM Building</string>
    <string name="attractions">Attractions!</string>
    <string name="food">Food!</string>
    <string name="transport">Getting Around!</string>
    <string name="radio">Radio Stations!</string>
    <string name="history">History</string>
    <string name="go_tigers"> Go Tigers! Go Lions! Go Red Wings!</string>
    <string name="history_text">History of Detroit: According to \'detroitmi.gov\', Detroit was incorporated as a city in 1815. Detroit is home to a rich mix of people from various ethnic backgrounds, including citizens of Italian, English, German, Polish, Irish, Mexican, Middle Eastern, African, and Greek descent. Today, Detroit is composed primarily of African Americans, Hispanics and Arab Americans. That racial diversity is reflected in areas such as Greektown, Mexicantown and Asian Village. Detroit played a key role in the industrialization of America throughout the 20th century, and is ready to transform itself as technologies develop into the 21st century.</string>
    <string name="attractions_welcome_text">These are some of the attractions Detroit is famous for!</string>
    <string name="attraction_image_cd">Tour image</string>
    <string name="food_welcome_text">These are some of the famous food places in downtown Detroit! Ratings are from Google Maps.</string>
    <string name="transport_welcome_text">These are some of the transport options you will find helpful when you will visit the city of Detroit!</string>
    <string name="radio_welcome_text">These are some of the radio stations you can hear in Detroit!</string>
    <string name="foodplace_giovannis">Giovanni\'s</string>
    <string name="foodplace_scotty_simpson_detroit"><![CDATA[Scotty Simpson\'s Fish & Chips]]></string>
    <string name="foodplace_roast_detroit">Roast</string>
    <string name="foodplace_supino_pizza">Supino Pizzeria</string>
    <string name="foodplace_giovannis_address">330 S Oakwood, Detroit, MI 48217–1453</string>
    <string name="foodplace_scotty_simpson_address">22200 Fenkell Ave, Detroit, MI 48223</string>
    <string name="foodplace_roast_address">1128 Washington Blvd, Detroit, MI 48226</string>
    <string name="foodplace_supino_address">2457 Russell St, Detroit, MI 48207</string>
    <string name="foodplace_giovannis_phonenumber">(313) 841–0122</string>
    <string name="foodplace_scotty_simpson_phonenumber">(313) 533–0950</string>
    <string name="foodplace_roast_phonenumber">(313) 961–2500</string>
    <string name="foodplace_supino_phonenumber">(313) 567–7879</string>
    <string name="giovannis_website">http://www.giovannisristorante.com</string>
    <string name="scotty_simpson_website">places.singleplatform.com</string>
    <string name="roast_website">roastdetroit.com</string>
    <string name="supino_website">supinopizzeria.com</string>
    <string name="giovannis_ratings">Ratings: 4.7/5</string>
    <string name="scotty_simpson_ratings">Ratings: 4.6/5</string>
    <string name="roast_ratings">Ratings: 4.5/5</string>
    <string name="supino_ratings">Ratings: 4.6/5</string>
    <string name="giovannis_foodtype">Italian, Vegetarian, Vegan Options</string>
    <string name="scotty_simpson_foodtype">Burgers, Fish\'n\'chips, Sea Food</string>
    <string name="roast_foodtype">Steak, Meat</string>
    <string name="pizza">Pizza</string>
    <string name="attraction_belle_isle">Belle Isle Park</string>
    <string name="attraction_henry_ford">The Henry Ford</string>
    <string name="attraction_renaissance_center">Renaissance Center</string>
    <string name="attraction_dia">Detroit Institute of Arts</string>
    <string name="attraction_greektown_casino">Greektown Casino</string>
    <string name="attraction_detroit_zoo">Detroit Zoo</string>
    <string name="belle_isle_address">Belle Isle, Michigan</string>
    <string name="henry_ford_address">20900 Oakwood Blvd, Dearborn, MI 48124</string>
    <string name="renaissance_center_address">Detroit, MI 48243</string>
    <string name="dia_address">5200 Woodward Ave, Detroit, MI 48202</string>
    <string name="greektown_casino_address">555 East Lafayette Blvd, Detroit, MI 48226</string>
    <string name="detroit_zoo_address">8450 W 10 Mile Rd, Royal Oak, MI 48067</string>
    <string name="belle_isle_phonenumber">(313) 331–7760</string>
    <string name="henry_ford_phonenumber">(313) 982–6001</string>
    <string name="renaissance_center_phonenumber">(313) 567–3126</string>
    <string name="dia_phonenumber">(313) 833–7900</string>
    <string name="greektown_casino_phonenumber">(313) 223–2999</string>
    <string name="detroit_zoo_phonenumber">(248) 541–5717</string>
    <string name="belle_isle_website">https://www.belleisleconservancy.org</string>
    <string name="henry_ford_website">https://www.thehenryford.org</string>
    <string name="renaissance_center_website">gmrencen.com</string>
    <string name="dia_website">https://www.dia.org</string>
    <string name="greektown_casino_website">https://www.greektowncasino.com</string>
    <string name="detroit_zoo_website">https://detroitzoo.org</string>
    <string name="radio_wkqi">95.5 WKQI FM</string>
    <string name="radio_wxyt">97.1 WXYT FM</string>
    <string name="radio_amp">98.7 AMP FM</string>
    <string name="radio_wycd">99.5 WYCD FM</string>
    <string name="radio_womc">104.3 WOMC FM</string>
    <string name="radio_wmgc">105.1 WMGC FM</string>
    <string name="radio_wjr">760 WJR AM</string>
    <string name="radio_wwj">950 WWJ AM</string>
    <string name="wkqi_website">https://channel955.iheart.com/</string>
    <string name="wxyt_website">https://player.radio.com/listen/station/971-the-ticket</string>
    <string name="amp_website">https://player.radio.com/listen/station/987-amp-radio</string>
    <string name="wycd_website">http://player.radio.com/listen/station/995-wycd</string>
    <string name="womc_website">http://player.radio.com/listen/station/1043-womc-hd2</string>
    <string name="wmgc_website">https://1051thebounce.com/</string>
    <string name="wjr_website">www.wjr.com</string>
    <string name="wwj_website">http://player.radio.com/listen/station/wwj-newsradio-950</string>
    <string name="radio_type_tops">Top-40</string>
    <string name="radio_type_sports">Sports</string>
    <string name="radio_type_country">Country</string>
    <string name="radio_type_classic_hits">Classic Hits</string>
    <string name="radio_type_hip_hop">Hip Hop</string>
    <string name="radio_type_news_talk">News/Talk</string>
    <string name="radio_type_news">News</string>
    <string name="welcome">Welcome!</string>
    <string name="learn_about_detroit_toast">Click on the tabs above to learn more about Detroit!</string>
    <string name="transport_ddot">Detroit Department Of Transportation</string>
    <string name="transport_greyhound">Greyhound</string>
    <string name="transport_enterprise">Enterprise Rent-A-Car</string>
    <string name="transport_hertz">Hertz</string>
    <string name="transport_dpm">Detroit People Mover</string>
    <string name="transport_qline">QLine</string>
    <string name="transport_biking">Biking</string>
    <string name="ddot_website">www.detroitmi.gov/How-Do-I/Locate-Transportation/Bus-Schedules</string>
    <string name="greyhound_website">locations.greyhound.com/us/michigan/detroit</string>
    <string name="enterprise_website">https://www.enterprise.com</string>
    <string name="hertz_website">www.hertz.com</string>
    <string name="dpm_website">www.thepeoplemover.com/map.html</string>
    <string name="qline_website">https://qlinedetroit.com</string>
    <string name="biking_website">http://detroitgreenways.org/bike-map-and-parking</string>
    <string name="transport_type_city_bus">City Bus</string>
    <string name="transport_type_bus">Bus</string>
    <string name="transport_type_rental_car">Rental Car</string>
    <string name="transport_type_third_rail">Third Rail Train</string>
    <string name="transport_type_street_car">StreetCar</string>
    <string name="transport_type_bike">Bike</string>
</resources>
